[package]
name = "rust_antivirus"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
sysinfo = "0.37.2"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "winbase", "fileapi", "handleapi", "tlhelp32", "winnt", "libloaderapi", "memoryapi"] }
walkdir = "2.4"
ring = "0.17"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
anyhow = "1.0"
hex = "0.4"
rfd = "0.15.4"
ctrlc = "3.2"
# Make YARA optional to avoid building yara-sys/bindgen unless explicitly requested.
yara = { version = "0.30.0", optional = true }

[[bin]]
name = "realtime_monitor"
path = "src/realtime_monitor.rs"

[features]
# default build does NOT enable YARA (avoids libclang/bindgen requirements)
default = []
# enable YARA support (compiles yara and yara-sys)
with-yara = ["yara"]